Update: run_all.sh, unit tests, e2e tests, config integrated

--- a/.gitignore
+++ b/.gitignore
@@ -11,9 +11,9 @@ Makefile
 *.o
 
 # ---- Executables ----
-generator
-processor
-logger
+# generator
+# processor
+# logger
 
 # ---- Logs ----
 logs/
