added testcases deleted unwanted lines updated all codes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "files.associations": {
         "*.embeddedhtml": "html",
-        "streambuf": "cpp"
+        "streambuf": "cpp",
+        "regex": "cpp",
+        "chrono": "cpp"
     }
 }
